# NPD_final

./: .gitignore  .pre-commit-config.yaml  Documentation.tex  Driver.ipynb  README.md  program.prof  pyproject.toml  requirements.txt  setup.py
taxes/: README.md  download.py  requirements.txt  setup.cfg  setup.py
taxes/taxes/: analyze.py  download.py  loading.py  preprocessing.py  processing.py  visualize.py
taxes/tests/: test_download.py  test_loading.py  test_preprocessing.py
