[metadata]
name = taxes
version = 1.0
description = A package for calculating teritorial income in Poland
long_description = file: README.md
long_description_content_type = text/markdown
author = Kacper Cybiński
author_email = k.cybinski@student.uw.edu.pl
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
